@@ -1,3 +1,7 @@
+2012-08-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/betaradio.vala: Correct thread usage.
+
 2012-07-09  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* src/any_tray_icon.c: Remove the check of Unity.
